fix(ui): disable autoscroll on prompt navigation; truncate long prompts in list
- ChatConsolePanel.scrollToEntry: call setAutoScroll(false) before
  scrollIntoView so the ResizeObserver/MutationObserver cannot re-anchor
  to the bottom after navigating to a clicked prompt entry.

- PromptsPanel.BubbleRenderer: apply truncatePrompt() to displayed text,
  capping at MAX_ROWS=5 lines and MAX_CHARS=200 characters (whichever
  comes first). Trailing "…" appended when truncated.

- PromptsPanelLogicTest: add 7 tests covering all truncation cases
  (short text, exact limits, rows-first, chars-first).

- PsiBridgeServiceStaticMethodsTest: remove duplicate FormatBaseErrorMessageTest
  nested class that caused compile failure (pre-existing issue on branch).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>